--- a/GS_selected.html
+++ b/GS_selected.html
@@ -96,7 +96,7 @@
     </nav>
   
 <div class="container-fluid">    
-  <div class="row content" id="uploadmark">
+  <div class="row content">
     <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
       <!--START Content Div-->
       <div class="row">
@@ -257,7 +257,7 @@
                                                     	<button type="button" class="btn-sm btn-success fill" id="" value="searchidmanual">Search ID Manual</button>
                                                     </div>
                                                     <div class="btn-group">
-                                                    	<button type="button" class="btn-sm btn-success fill" id="" value="manualupload">Manually Upload</button>
+                                                    	<button type="button" class="btn-sm btn-success fill" id="" value="manualupload" disabled>Manually Upload</button>
                                                     </div>
                                                 </div>
                                             </div>
