--- a/additional_information.html
+++ b/additional_information.html
@@ -286,13 +286,13 @@
                                                                             <div class="wide">
                                                                                 <div class="row">
                                                                                     <div class="col-xs-4 col-md-3 col-lg-3 form-group form-group-md">
-                                                                                        <label for="inlineRadio037" class="radio-inline radiocontainer">Evidence<input type="radio" name="wholepartradio" id="inlineRadio037" value="evidence" tabindex="0"><span class="checkmark"></span></label>
+                                                                                        <label for="inlineRadio037" class="radio-inline radiocontainer">Evidence<input type="radio" name="evidencebase" id="inlineRadio037" value="evidence" tabindex="0"><span class="checkmark"></span></label>
                                                                                     </div>
                                                                                     <div class="col-xs-8 col-md-4 col-lg-4 form-group form-group-md">
-                                                                                        <label for="inlineRadio038" class="radio-inline radiocontainer">Prior Registrations<input type="radio" name="wholepartradio" id="inlineRadio038" value="prioregistrations" tabindex="0"><span class="checkmark"></span></label>
+                                                                                        <label for="inlineRadio038" class="radio-inline radiocontainer">Prior Registrations<input type="radio" name="wholepartradiotwo" id="inlineRadio038" value="prioregistrations" tabindex="0"><span class="checkmark"></span></label>
                                                                                     </div>
                                                                                     <div class="col-xs-12 col-md-5 col-lg-5 form-group form-group-md">
-                                                                                        <label for="inlineRadio039" class="radio-inline radiocontainer">Five or more years of use<input type="radio" name="wholepartradio" id="inlineRadio039" value="fivepluyears" tabindex="0"><span class="checkmark"></span></label>
+                                                                                        <label for="inlineRadio039" class="radio-inline radiocontainer">Five or more years of use<input type="radio" name="wholepartradiotwo" id="inlineRadio039" value="fivepluyears" tabindex="0"><span class="checkmark"></span></label>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
@@ -338,8 +338,8 @@
                                                                 <div class="form-group form-group-md">
                                                                     <p class="weight600">Is this for the whole mark, or part of the mark?</p>
                                                                     <div role="radiogroup" aria-labelledby="disclm" class="form-group form-group-md">
-                                                                      <label for="inlineRadio042" class="radio-inline radiocontainer">Whole<input type="radio" name="wholepartradio" id="inlineRadio042" value="whole" tabindex="0"><span class="checkmark"></span></label>
-                                                                      <label for="inlineRadio043" class="radio-inline radiocontainer">In part<input type="radio" name="wholepartradio" id="inlineRadio043" value="inpart" tabindex="0"><span class="checkmark"></span></label>
+                                                                      <label for="inlineRadio042" class="radio-inline radiocontainer">Whole<input type="radio" name="wholepartradiothree" id="inlineRadio042" value="whole" tabindex="0"><span class="checkmark"></span></label>
+                                                                      <label for="inlineRadio043" class="radio-inline radiocontainer">In part<input type="radio" name="wholepartradiothree" id="inlineRadio043" value="inpart" tabindex="0"><span class="checkmark"></span></label>
                                                                     </div><!--END radiogroup-->
                                                                     <div id="yespartother" class="form-group"><!--toggle 'yes' radio-->
                                                                         <div class="form-group form-group-md">
