--- a/dashboard.html
+++ b/dashboard.html
@@ -114,12 +114,15 @@
                                             	<div class="col-xs-12 dashsection">
                                                     <table id="dashboardtableone" class="table dataTable row-border display responsive" style="width:100%" role="grid" aria-describedby="filings">
                                                         <thead>
+                                                        	<tr role="row">
+                                                                <th colspan="5" scope="colgroup">Filings</th>
+                                                            </tr>
                                                             <tr role="row">
-                                                                <th class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
-                                                                <th class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Registration#</th>
-                                                                <th class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Mark</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Owner</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Registration#</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Mark</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Owner</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
@@ -174,14 +177,17 @@
                                             	<div class="col-xs-12 dashsection">
                                                     <table id="dashboardtabletwo" class="table DataTable row-border display responsive" style="width:100%" role="grid" aria-describedby="filings">
                                                         <thead>
+                                                        	<tr role="row">
+                                                                <th colspan="7" scope="colgroup">Upcoming Action Due</th>
+                                                            </tr>
                                                             <tr role="row">
-                                                                <th class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
-                                                                <th class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Registration#</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Mark</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Owner</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Due Date</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
-                                                                <th class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Action</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Registration#</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Mark</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Owner</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Due Date</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Action</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
@@ -276,32 +282,53 @@
                             </div><!--two-->
                             <div class="col-xs-12 col-md-12 col-lg-3">
                             	<section id="announcements">
-                                    <div class="dataTables_wrapper no-wrap dt-bootstrap responsive">
-                                        <div class="row">
-                                            <div class="col-xs-12">
-                                            	<div class="col-xs-12 dashsection">
-                                                    <div class="tabwidget" id="tabmusic-wt">
-                                                        <ul>
-                                                            <li><a href="#panel1-wt" aria-describedby="tab-tip-wt">Updated Two-step Authentication</a></li>
-                                                            <li><a href="#panel2-wt">System Maintenance Notifications</a></li>
-                                                            <li><a href="#panel3-wt">Electronic System Maintenance Schedule</a></li>
-                                                        </ul>
-                                                        <div class="tabpanels second">
-                                                            <div id="panel1-wt" tabindex="0">
-                                                                <p>The USPTO has updated the two-step authentication to modernize the security process.</p>
+                                    <div class="row">
+                                        <div class="panel-group">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <div class="row">
+                                                            <div class="col-xs-10">
+                                                                <div class="col-xs-12">
+                                                                    <div class="row">
+                                                                        <div class="col-xs-12">
+                                                                            <h4 class="panel-title number"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Check back here for system message and notifications.</h4>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
                                                             </div>
-                                                            <div id="panel2-wt" tabindex="0">
-                                                                <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
-                                                            </div>
-                                                            <div id="panel3-wt" tabindex="0">
-                                                                <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
+                                                            <div class="col-xs-2 closepans" style="height: 20px;">
+                                                                <button type="button" class="close closegspanels btn" aria-label="Close" style="line-height: 20px;"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
                                                             </div>
                                                         </div>
                                                     </div>
-                                              	</div>
+                                                </div>
+                                            </div>
+                                        <div class="col-xs-12">
+                                            <div class="col-xs-12" id="announce">
+                                                <h3>Announcements</h3>
+                                            </div>
+                                            <div class="col-xs-12 dashsection">
+                                                <div class="tabwidget" id="tabmusic-wt">
+                                                    <ul>
+                                                        <li class="notice"><a href="#panel1-wt" aria-describedby="tab-tip-wt">Updated Two-step Authentication</a></li>
+                                                        <li><a href="#panel2-wt">System Maintenance Notifications</a></li>
+                                                        <li><a href="#panel3-wt">Electronic System Maintenance Schedule</a></li>
+                                                    </ul>
+                                                    <div class="tabpanels second">
+                                                        <div id="panel1-wt" tabindex="0">
+                                                            <p>The USPTO has updated the two-step authentication to modernize the security process.</p>
+                                                        </div>
+                                                        <div id="panel2-wt" tabindex="0">
+                                                            <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, September.</p>
+                                                        </div>
+                                                        <div id="panel3-wt" tabindex="0">
+                                                            <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Sunday, November.</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                  	</div>
+                                    </div>
                                	</section>
                             </div><!--three-->
                         </div>
