--- a/dashboard.html
+++ b/dashboard.html
@@ -280,7 +280,7 @@
                             <div class="col-xs-12 col-md-12 col-lg-3">
                             	<section id="announcements">
                                     <div class="row">
-                                        <div class="panel-group">
+                                        <div class="panel-group warning">
                                                 <div class="panel panel-default">
                                                     <div class="panel-heading">
                                                         <div class="row">
