--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -499,8 +499,8 @@
                                         <label for="attorney-state">State</label>
                                         <select class="form-control" id="attorney-state" th:field="*{attorneyState}">
                                           <option value="Select">Select</option>
-                                          <option  value="AL">Alabama</option>
-                                            <option  value="AK">Alaska</option>
+                                          	<option value="AL">Alabama</option>
+                                            <option value="AK">Alaska</option>
                                             <option value="AZ">Arizona</option>
                                             <option value="AR">Arkansas</option>
                                             <option value="CA">California</option>
@@ -560,29 +560,39 @@
                                         <label for="attorney-email" class="sr-only"><span class="weight600">&#42;</span> Email Address</label>
                                         <input type="text" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}" required>
                                       </div>
-                                      <div class="col-xs-12 col-md-7 phones">
-                                          <div class="form-group form-group-md col-xs-4">
-                                            <label for="attorney-phonenumbertype">Phone Type</label>
-                                            <select class="form-control" id="attorney-phonenumbertype"><!--Needs th:field= attribute to capture this value on submit-->
-                                              <option value="Type">Type</option>
-                                              <option value="Cell">Cell</option>
-                                              <option value="Home">Home</option>
-                                              <option value="4">Work</option>
-                                              <option value="Fax">Fax</option>
-                                            </select>
-                                          </div>
-                                          <div class="form-group form-group-md col-xs-8">
-                                            <label for="attorney-phone">Phone Number</label>
-                                            <input type="text" class="form-control" id="attorney-phone" placeholder="Phone Number" th:field="*{attorneyPhone}">
-                                          </div>
-                                      </div>
-                                    <div class="appendphone"></div>
-                                    <div class="col-xs-7 col-md-3" role="group" aria-label="Add or delete additional phone numbers">
-                                        <div class="col-xs-9">
-                                            <button type="button" class="btn-sm btn-success add ctr" id="addphone">Add Number</button>
-                                        </div>
-                                        <div class="col-xs-3">
-                                            <button type="button" class="btn-sm btn-success add ctr" id="resetphone">&#8211;</button>
+                                      <div class="row phones">
+                                         <div class="col-xs-12">
+                                          	<div class="form-group form-group-md col-xs-6 col-sm-3">
+                                            	<label for="attorney-phonenumbertype">Phone Type</label>
+                                            	<select class="form-control" id="attorney-phonenumbertype"><!--Needs th:field= attribute to capture this value on submit-->
+                                              		<option value="Type">Type</option>
+                                              		<option value="Cell">Cell</option>
+                                              		<option value="Home">Home</option>
+                                              		<option value="4">Work</option>
+                                              		<option value="Fax">Fax</option>
+                                            	</select>
+                                          	</div>
+                                          	<div class="form-group form-group-md col-xs-6 col-sm-4">
+                                            	<label for="1">Phone Number</label>
+                                            	<input type="text" class="form-control" id="1" th:field="*{attorneyPhone}">
+                                          	</div>
+                                            <div class="form-group form-group-md col-xs-9 col-sm-3">
+                                              	<label for="22">Ext.</label>
+                                              	<input type="text" class="form-control" id="22">
+                                            </div>
+                                            <div class="col-xs-3 col-sm-2 form-group form-group-md visuallyremoved resetphone2">
+                                                <button type="button" class="btn btn-sm close resetphonebtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                            </div>
+                                    	</div>
+                                    </div> 
+                                    <div class="appendphones"></div>
+                                    <div class="col-xs-12" aria-label="add and remove additional phone numbers">
+                                        <div class="row">
+                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                <div class="btn-group col-xs-6">
+                                                    <button type="button" class="btn btn-sm btn-success addphoneinitial" id="addphone2" aria-label="add number">Add Number</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
