--- a/user_profile.html
+++ b/user_profile.html
@@ -416,7 +416,7 @@
                                 </div>
                                 <div class="row phones">
                                     <div class="col-xs-12">
-                                        <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
+                                        <div class="form-group form-group-md col-xs-6 col-sm-3">
                                             <label for="phonenumbertype">Phone Type</label>
                                             <select class="form-control" id="phonenumbertype">
                                             <option value="Type">Type</option>
@@ -426,13 +426,16 @@
                                             <option value="Fax">Fax</option>
                                             </select>
                                         </div>
-                                        <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                            <label for="phonenumber">Phone Number</label>
-                                            <input type="text" class="form-control" id="phonenumber">
+                                        <div class="form-group form-group-md col-xs-6 col-sm-4">
+                                            <label for="1">Phone Number</label>
+                                            <input type="text" class="form-control" id="1">
                                         </div>
-                                        <div class="form-group form-group-md col-xs-12 col-md-2 col-lg-2">
-                                            <label for="extension">Ext.</label>
-                                            <input type="text" class="form-control" id="extension">
+                                        <div class="form-group form-group-md col-xs-9 col-sm-3">
+                                            <label for="22">Ext.</label>
+                                            <input type="text" class="form-control" id="22">
+                                        </div>
+                                        <div class="col-xs-3 col-sm-2 form-group form-group-md visuallyremoved resetphone2">
+                                            <button type="button" class="btn btn-sm close resetphonebtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                         </div>
                                     </div>
                                 </div>
@@ -442,9 +445,6 @@
                                         <div class="inlinebuttons btn-group btn-group-justified">
                                             <div class="btn-group col-xs-6">
                                                 <button type="button" class="btn btn-sm btn-success addphoneinitial" id="addphone2" aria-label="add number">Add Number</button>
-                                            </div>
-                                            <div class="btn-group col-xs-6 visuallyremoved">
-                                                <button type="button" class="btn btn-sm close" id="resetphone2" aria-label="remove number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                             </div>
                                         </div>
                                     </div>
