--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -573,12 +573,12 @@
                                             	</select>
                                           	</div>
                                           	<div class="form-group form-group-md col-xs-6 col-sm-4">
-                                            	<label for="1">Phone Number</label>
-                                            	<input type="text" class="form-control" id="1" th:field="*{attorneyPhone}">
+                                            	<label for="attorney-phone">Phone Number</label>
+                                            	<input type="text" class="form-control" id="attorney-phone" th:field="*{attorneyPhone}">
                                           	</div>
                                             <div class="form-group form-group-md col-xs-9 col-sm-3">
-                                              	<label for="22">Ext.</label>
-                                              	<input type="text" class="form-control" id="22">
+                                              	<label for="attorney-ext">Ext.</label>
+                                              	<input type="text" class="form-control" id="attorney-ext">
                                             </div>
                                             <div class="col-xs-3 col-sm-2 form-group form-group-md visuallyremoved resetphone2">
                                                 <button type="button" class="btn btn-sm close resetphonebtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
@@ -586,7 +586,7 @@
                                     	</div>
                                     </div> 
                                     <div class="appendphones"></div>
-                                    <div class="col-xs-12" aria-label="add and remove additional phone numbers">
+                                    <div class="col-xs-12" aria-label="add additional phone number">
                                         <div class="row">
                                             <div class="inlinebuttons btn-group btn-group-justified">
                                                 <div class="btn-group col-xs-6">
