--- a/user_profile.html
+++ b/user_profile.html
@@ -427,12 +427,12 @@
                                             </select>
                                         </div>
                                         <div class="form-group form-group-md col-xs-6 col-sm-4">
-                                            <label for="1">Phone Number</label>
-                                            <input type="text" class="form-control" id="1">
+                                            <label for="phonenumber">Phone Number</label>
+                                            <input type="text" class="form-control" id="phonenumber">
                                         </div>
                                         <div class="form-group form-group-md col-xs-9 col-sm-3">
-                                            <label for="22">Ext.</label>
-                                            <input type="text" class="form-control" id="22">
+                                            <label for="extension">Ext.</label>
+                                            <input type="text" class="form-control" id="extension">
                                         </div>
                                         <div class="col-xs-3 col-sm-2 form-group form-group-md visuallyremoved resetphone2">
                                             <button type="button" class="btn btn-sm close resetphonebtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
@@ -440,7 +440,7 @@
                                     </div>
                                 </div>
                                 <div class="appendphones"></div>
-                                <div class="col-xs-12" aria-label="add and remove additional phone numbers">
+                                <div class="col-xs-12" aria-label="add additional phone number">
                                     <div class="row">
                                         <div class="inlinebuttons btn-group btn-group-justified">
                                             <div class="btn-group col-xs-6">
